# wind-farm-control

./: .gitignore  DOCKERINSTRUCTIONS.md  README.md  data_generation.py  dec1.txt  dec6.txt  format_test.py  main.py  new.py  pyproject.toml  run_file_datageneration.py  run_make_data.py  sim_1.py  test_controllers.ipynb  test_mappo.ipynb  test_single_agent.ipynb
archive/: README.md
archive/configs/: env.yaml  farm_setup.yaml
archive/generated_data/: curl_3turbines_data.csv  gauss_3turbines_data.csv
archive/notes/: dec6.txt
archived run files/: run_make_data.py  test_run.py
configs/: env.yaml  farm_1.yml  farm_2.yml  farm_setup.yml
data_generation/: data_gen.ipynb  new.py
data_generation/farm_types/: cc.yaml
data_generation/output/data/: gch.yaml_4turbines.csv
environments/: __init__.py  floris_torchrl_env.py
farm_types/: gch.yaml
generated_data/: jensen_3turbines_data.csv  turboparkgauss_3turbines_data.csv
models/: curl.py  gauss.py  gch.py  jensen.py  turbopark.py
notebooks/: test_controllers.ipynb  test_mappo.ipynb
notes/: dec1.txt  dec8.txt
run files/: old_make_data.py
runs/26-02-18_13-50-52-485680_MAPPO/: events.out.tfevents.1771440652.hnt-10122.apn.wlan.private.upenn.edu.3157.11
runs/26-03-05_12-54-24-926261_MAPPO/: events.out.tfevents.1772733264.ist-16013.apn.wlan.private.upenn.edu.73017.16
runs/26-03-05_12-54-28-309779_MAPPO/: events.out.tfevents.1772733268.ist-16013.apn.wlan.private.upenn.edu.73017.17
runs/26-03-05_12-54-30-350596_MAPPO/: events.out.tfevents.1772733270.ist-16013.apn.wlan.private.upenn.edu.73017.18
runs/26-03-05_12-55-05-420124_MAPPO/: events.out.tfevents.1772733305.ist-16013.apn.wlan.private.upenn.edu.73017.19
runs/26-03-05_12-55-07-564536_MAPPO/: events.out.tfevents.1772733307.ist-16013.apn.wlan.private.upenn.edu.73017.20
runs/26-03-05_12-55-09-261393_MAPPO/: events.out.tfevents.1772733309.ist-16013.apn.wlan.private.upenn.edu.73017.21
runs/26-03-05_12-55-10-692596_MAPPO/: events.out.tfevents.1772733310.ist-16013.apn.wlan.private.upenn.edu.73017.22
runs/26-03-05_12-55-12-171313_MAPPO/: events.out.tfevents.1772733312.ist-16013.apn.wlan.private.upenn.edu.73017.23
runs/26-03-05_12-56-58-386139_MAPPO/: events.out.tfevents.1772733418.ist-16013.apn.wlan.private.upenn.edu.73017.24
runs/26-03-05_13-03-34-820891_MAPPO/: events.out.tfevents.1772733814.ist-16013.apn.wlan.private.upenn.edu.73017.25
runs/26-03-05_13-04-57-053551_MAPPO/: events.out.tfevents.1772733897.ist-16013.apn.wlan.private.upenn.edu.73017.26
scripts/: mappo_torchrl.ipynb  mappo_torchrl.py  skrl_mappo.ipynb  train_mappo_floris.py
scripts/torchrl_mappo/: floris_torchrl_env.py  mappo_torchrl.py  train_mappo_floris.py
src/wind_farm_control/: __init__.py
tensorboard_logs_test_controllers/DDPG_run_1/: events.out.tfevents.1770392755.hnt-00115.apn.wlan.private.upenn.edu.16381.1
tensorboard_logs_test_controllers/PPO_run_1/: events.out.tfevents.1770388851.Bhavyas-MacBook-Pro.local.16381.0
tensorboard_logs_test_controllers/SAC_run_1/: events.out.tfevents.1770403902.hnt-00115.apn.wlan.private.upenn.edu.16381.2
tensorboard_logs_test_controllers/SAC_run_2/: events.out.tfevents.1771422412.Bhavyas-MacBook-Pro.local.1291.0
testing_controllers/: evaluate.py  floris_env.py  train.py
testing_controllers/results/: evaluation_results.csv
tests/: __init__.py  test_environment.py  test_models.py  test_torchrl_environment.py  test_training.py
(+67 files in other folders)
