[project]
name = "wind-farm-control"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "floris>=4.6.2",
    "gymnasium>=1.2.3",
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.4",
    "numpy>=2.4.2",
    "pettingzoo>=1.25.0",
    "seaborn>=0.13.2",
    "skrl>=1.4.3",
    "tensorboard>=2.20.0",
    "torch>=2.10.0",
]
