[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wind-farm-control"
version = "0.1.0"
description = "Multi-agent reinforcement learning for wind farm yaw control optimization"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Bhavya Sur" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "benchmarl>=1.5.2",
    "floris>=4.6.2",
    "gymnasium>=1.2.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "optuna>=4.8.0",
    "pandas>=2.2.0",
    "path>=17.1.1",
    "pettingzoo>=1.25.0",
    "pytest>=9.0.2",
    "seaborn>=0.13.2",
    "skrl>=1.4.3",
    "supersuit>=3.10.0",
    "tensorboard>=2.20.0",
    "tensordict>=0.11.0",
    "torch>=2.10.0",
    "torchrl>=0.11.1",
    "tqdm>=4.67.3",
    "vmas>=1.5.2",
    "environments",
    "wandb>=0.25.1",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.4",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]
tuning = [
    "optuna>=4.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/wind_farm_control"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
]

[tool.uv.workspace]
members = [
    "wind-farm-control",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.4",
]
